Add logout parts and Improve login
