# src/routers/auth.router.js
@@ -1,9 +1,10 @@
 const { Router } = require("express");
-const { registrationUser, loginUser, refreshTokens } = require("../controllers/auth.controller");
+const { registrationUser, loginUser, refreshTokens, logoutUser } = require("../controllers/auth.controller");
 const authRouter = Router();
 
 authRouter.post("/registration", registrationUser);
 authRouter.post("/login", loginUser);
 authRouter.post("/refresh-token", refreshTokens);
+authRouter.post("/logout", logoutUser);
 
 module.exports = authRouter;
